--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="action_settings">Settings</string>
     <string name="insert">Insert</string>
     <string name="title_activity_data_list">DataListActivity</string>
+
+    <string name="title_activity_map_view">MapView</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_fish_map">Map</string>
 </resources>
